force-app/main/default/objects/TemporaryQuoteLineItem__c/TemporaryQuoteLineItem__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store the discount logic temporary in Salesforce and scribe deletes.</description>
    <label>Temporary Quote Line Item</label>
    <nameField>
        <label>Temporary Quote Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporary Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>