force-app/main/default/objects/TemporaryQuoteLineItem__c/fields/Article_Name__c.field-meta.xml
<CustomField>
    <fullName>Article_Name__c</fullName>
    <description>This will contain Discount reason value and Incentive name of the proposal adjustment line items.</description>
    <label>Article Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>