force-app/main/default/objects/TemporaryQuoteLineItem__c/fields/ArticleCode__c.field-meta.xml
<CustomField>
    <fullName>ArticleCode__c</fullName>
    <description>This will contain Discount reason code and Incentive code of the proposal adjustment line items.</description>
    <label>Article Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>