force-app/main/default/objects/TemporaryQuoteLineItem__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This will contain Discount reason value and Incentive name of the proposal adjustment line items.</description>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>