force-app/main/default/objects/TemporaryQuoteLineItem__c/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <description>This will contain Discount reason code and Incentive codeof the proposal adjustment line items.</description>
    <label>Discount Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>