force-app/main/default/objects/TemporaryQuoteLineItem__c/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <description>This field is used to save the sum of discounted prices in quote preview component.</description>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>