force-app/main/default/objects/TemporaryQuoteLineItem__c/fields/Quote_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Quote_Proposal__c</fullName>
    <description>Quote ID from Proposal Line Items.</description>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Temporary Quote Line Items</relationshipLabel>
    <relationshipName>Temporary_Quote_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>